Expose generic extension blob storage API